URL -> URI
Java 21 doesn't like our use of URL, so move to URI everywhere
for future compatibility.

Signed-off-by: Appu Goundan <appu@google.com>